# AI_solo_coder_task_A_110

./: README.md
backend/: .env  Cargo.toml
backend/src/: catalog_loader.rs  config.rs  coordinate_transformer.rs  db.rs  main.rs  models.rs  transient_matcher.rs
backend/src/astronomy/: constants.rs  mod.rs  precession.rs
backend/src/matching/: bayes.rs  mod.rs
backend/static/: index.html
backend/static/css/: style.css
backend/static/js/: app.js
database/scripts/: 01_init_schema.sql  seed_data.py
frontend/: index.html
frontend/js/: api.js  app.js  astro.js  starfield.js  ui.js
