[package]
name = "ancient-star-backend"
version = "0.1.0"
edition = "2021"
description = "古代星表数据数字化与现代天体物理验证系统 - Rust后端"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
rand = "0.8"
approx = "0.5"
actix-files = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
