[package]
name = "ancient-star-backend"
version = "0.2.0"
edition = "2021"
description = "古代星表数字化与现代天体物理验证系统后端"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"
postgres-types = { version = "0.2", features = ["derive"] }
dotenv = "0.15"
rand = "0.8"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
